# moveit_collision_check

./: CMakeLists.txt  README.md  package.xml  rviz.rviz
launch/: rviz.launch  start.launch
scripts/: generate_acm.py  generate_collision_dataset.py  save_current_robot_description.py  train_collision_model.py
src/: collision_check.cpp
srv/: CheckCollision.srv
urdf/: horti_nn_robot_description_semantic.urdf  horti_robot_description.urdf  horti_robot_description_semantic.urdf  lite6_robot_description.urdf  lite6_robot_description_semantic.urdf  mick_nn_robot_description.urdf  mick_nn_robot_description_semantic.urdf  mick_robot_description_semantic.urdf  xarm7_robot_description.urdf  xarm7_robot_description_semantic.urdf
